@@ -1,4 +1,5 @@
 xx Jan 2005: 0.1.3 Miek <miek@miek.nl>
+   * hist.sh updated, it goes back for 3 months now
 
 
 06 Jan 2005: 0.1.2 Miek <miek@miek.nl>
